--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <button>hello world</button>
+    <button class="btn btn-success">hello</button>
+  </body>
 </html>
