--- a/login.html
+++ b/login.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Welcome to ChatBook. This website is for those people who loves to share their creative works and inspire others."
+      content="Welcome to Bcreative. This website is for those people who loves to share their creative works and inspire others."
     />
-    <title>ChatBook | Log in page</title>
+    <title>Bcreative | Log in page</title>
     <script
       src="https://kit.fontawesome.com/bdb94ef7c7.js"
       crossorigin="anonymous"
@@ -21,57 +21,61 @@
     >
       <div class="row">
         <!-- heading -->
-        <div class="col-12 col-sm-12 col-md-5 col-lg-6 mt-lg-5 pt-lg-5">
-          <h1 class="text-primary fw-bold fs-0">ChatBook</h1>
+        <div class="col-12 col-sm-12 col-md-5 col-lg-7 mt-lg-5 pt-lg-5">
+          <h1 class="text-primary fw-bold fs-0">Bcreative</h1>
           <p class="w-75" mx-auto mx-lg-0 fs-4>
-            Chatbook helps to connect and share with the people in your life
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio neque dolores autem fugiat. Quisquam itaque hic cupiditate, totam natus expedita incidunt tenetur iure dolorum atque dolorem voluptate nemo consequatur id!
           </p>
         </div>
         <!-- form -->
-        <div class="col-12 col-sm-12 col-md-7 col-lg-6 style="max-width: 28rem
-        width: 100%">
-        <form action="index.html">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-            />
-            <div id="emailHelp" class="form-text">
-              We'll never share your email with anyone else.
+        <div class="col-12 col-sm-12 col-md-7 col-lg-5">
+        <form action="index.html" id="log-in-form">
+          <div class="row g-3">
+            <div class="col-12">
+              <label for="email" class="form-label">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="name@example.com"
+                required
+              />
+              <div class="invalid-feedback">
+                Please enter a valid email address.
+              </div>
+            </div>
+            <div class="col-12">
+              <label for="password" class="form-label">Password</label>
+              <input
+                type="text"
+                class="form-control"
+                id="password"
+                minlength="8"
+                placeholder="minimum 8 characters"
+                required
+              />
+              <div class="invalid-feedback">
+                Your password should be minimum 8 characters
+              </div>
+            </div>
+            <div class="col-12">
+              <input type="checkbox" class="form-check-input" id="save-info" />
+              <label for="save-info" class="form-label">Remember me</label>
             </div>
           </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label"
-              >Password</label
-            >
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-            />
-          </div>
-          <div class="mb-3 form-check">
-            <input
-              type="checkbox"
-              class="form-check-input"
-              id="exampleCheck1"
-            />
-            <label class="form-check-label" for="exampleCheck1"
-              >Remember me</label
-            >
-          </div>
-          <button type="submit" class="btn btn-primary w-100 my-3">
-            Log In
+          <hr class="my-4" />
+          <button
+            class="btn btn-primary w-100 my-3 btn-special btn-md"
+            type="submit"
+            id="btn-submit"
+          >
+            Log in
           </button>
           <a href="#" class="text-decoration-none text-center"
-            ><p>Forgot password?</p></a
-          >
+          ><p>Forgot password?</p></a
+        >
         </form>
+
         <div class="text-center my-4">
           <button
             type="submit"
@@ -111,7 +115,7 @@
               <div class="modal-body">
                 <!-- First name and Surname-->
                 <div
-                  class="row d-flex flex-column flex-lg-row justify-content-evenly mt-5 pt-5"
+                  class="row d-flex flex-column flex-lg-row justify-content-evenly mt-2 pt-2"
                 >
                   <div class="col">
                     <label for="name" class="form-label">First Name</label>
@@ -213,7 +217,7 @@
                   </span>
                 </div>
                 <!-- btn --
-                <!-- footer of the modal -->
+                  <!-- footer of the modal -->
                 <div class="modal-footer">
                   <button
                     type="button"
