col value added to hero section

--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
       class="bg-white d-flex justify-content-center align-items-center fixed-top shadow "
       style="min-height: 56px; z-index: 5"
     >
-      <!-- new code -->
+      <!-- nav-->
       <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
           <a class="navbar-brand text-primary fw-bold" href="index.html">Bcreative</a>
@@ -42,21 +42,24 @@
               <button class="btn  btn-primary text-white" type="submit">Search</button>
             </form> 
         </div>
-      </nav>  
+      </nav> 
+
+
+  
+      
      
     </header>
-    <!------------------ main---------------->
-   
+    <!------------------ main----------------> 
     <main class="container-fluid mt-5">
        <!-- hero section-->
       <div class="container border-bottom border-gray">
         <div class="row d-flex flex-column flex-md-row justify-content-evenly align-items-center">
             <!-- Hero section -->
-            <div class="col">
+            <div class="col-12 col-md-6">
                 <img src="images/sayeda.img.jpg" alt="Profile image" class="rounded-circle me-2 img-fluid " style="width: 400px; height:400 px; object-fit: cover mb-5">
             </div>
-            <div class="col d-flex flex-column">
-                <div class="my-4">
+            <div class="col-12 col-md-6 d-flex flex-column">
+                <div class="my-4">  
                     <p class="fs-2">Sayeda</p>
                     <p class="lh-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt dolorem deleniti corporis nulla quibusdam a suscipit. Voluptates culpa animi unde, aliquid et sint incidunt voluptatibus ut rem, magni rerum eaque incidunt voluptatibus ut rem, magni rerum eaque.</p>
                 </div>
@@ -80,7 +83,7 @@
                     </div>
                 </div> 
                  <!-- create post -->
-                <div class=" col bg-white p-3 mt-3 rounded ms-auto" style=" width: 100%;">
+                <div class=" col bg-white p-3 mt-3 rounded ms-auto w-100">
                     <!-- avatar -->
                     <div class="d-flex" type="button">
                     <div class="p-1">
@@ -93,7 +96,7 @@
                     </div>
                     <input
                         type="text"
-                        class="form-control rounded-pill border border-2 border-primary bg-gray pointer"
+                        class="form-control rounded-pill border border-2 border-gray bg-gray pointer"
                         disabled
                         placeholder="Hi! Message me here"
                         data-bs-toggle="modal"
@@ -108,7 +111,7 @@
       <div class="row justify-content-evenly mt-5">
          <!-- Posts -->
         <div class="col-12 col-lg-8 pb-5">
-          <div class="d-flex flex-column justify-content-center w-100 mx-auto" style="padding-top: 56px; max-width: 680px">
+          <div class="d-flex flex-column justify-content-center w-100 mx-auto" style="max-width: 680px">
             <!--  posts -->
             <!--  post one -->
             <div class="bg-white p-4 rounded shadow mt-3">
