--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- main -->
     <!-- Feeds -->
     <main class="container">
-      <div class="row border border-primary px-5">
+      <div class="row px-5">
         <!-- Feeds -->
         <div
           class="col-12 col-md-12 col-lg-6 mt-4 order-sm-1 order-md-1 order-lg-2"
@@ -908,8 +908,8 @@
             <div
               class="d-flex justify-content-between align-items-center mt-5 border-bottom border-gray"
             >
-              <p class="text-muted fs-4 m-3">Your Contacts</p>
-              <p class="text-muted fs-7 fw-bold m-3">View all</p>
+              <p class="text-muted fs-5 m-3">Your Contacts</p>
+              <p class="text-muted fs-7 m-3">View all</p>
             </div>
             <div class="p-3">
               <!-- Your contact -->
@@ -992,7 +992,7 @@
               <div class="p-3">
                 <!-- Suggestion to add new friend -->
                 <ul
-                  class="d-flex flex-column justify-content-between align-items-center"
+                  class="d-flex flex-column justify-content-between align-items-center border-bottom border-gray"
                 >
                   <!-- friend 1 -->
                   <li
