--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </nav>
     <!-- main -->
     <!-- Feeds -->
-    <main class="container">
-      <div class="row px-5">
+    <main class="container-fluid">
+      <div class="row px-md-5">
         <!-- Feeds -->
         <div
           class="col-12 col-md-12 col-lg-6 mt-4 order-sm-1 order-md-1 order-lg-2"
@@ -227,7 +227,7 @@
                   />
                   <div>
                     <p class="m-0 fw-bold">Jacob</p>
-                    <span class="text-muted fs-7">July 17 at 1:23 pm</span>
+                    <span class="text-muted fs-7">Oct 24 at 12:15 pm</span>
                   </div>
                 </div>
                 <!-- edit -->
@@ -456,7 +456,7 @@
                   />
                   <div>
                     <p class="m-0 fw-bold">Sophia</p>
-                    <span class="text-muted fs-7">July 17 at 1:23 pm</span>
+                    <span class="text-muted fs-7">Oct 24 at 12:15 pm</span>
                   </div>
                 </div>
                 <!-- edit -->
@@ -685,7 +685,7 @@
                   />
                   <div>
                     <p class="m-0 fw-bold">Benjamin</p>
-                    <span class="text-muted fs-7">July 17 at 1:23 pm</span>
+                    <span class="text-muted fs-7">Oct 24 at 12:15 pm</span>
                   </div>
                 </div>
                 <!-- edit -->
