--- a/profile.html
+++ b/profile.html
@@ -260,7 +260,9 @@
       </div>
       <!-- main body -->
       <div class="container">
-        <div class="row justify-content-evenly align-items-center mt-5">
+        <div
+          class="row d-flex flex-column flex-lg-row justify-content-between align-items-start mt-5"
+        >
           <!-- Posts -->
           <div class="col-12 col-md-12 col-lg-8">
             <!--  posts -->
