--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                 >
                   <div class="p-2">
                     <img
-                      src="images/albert-dera-ILip77SbmOE-unsplash.jpg"
+                      src="images/cook.jpg"
                       alt="avatar"
                       class="rounded-circle me-2"
                       style="width: 38px; height: 38px; object-fit: cover"
