added commnent to find search field easily

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               <a class="nav-link text-danger" href="login.html">Log out</a>
             </li>
           </ul>
+          <!-- search field start -->
           <form class="d-flex" role="search">
             <input
               class="form-control me-2 border border-primary"
@@ -64,6 +65,7 @@
               Search
             </button>
           </form>
+          <!-- search field end -->
         </div>
       </div>
     </nav>
