--- a/login.html
+++ b/login.html
@@ -74,6 +74,7 @@
                 </div>
               </div>
               <hr class="my-4" />
+              <!-- log in button -->
               <button
                 class="btn btn-primary w-100 my-3 btn-special btn-md"
                 type="submit"
@@ -81,10 +82,12 @@
               >
                 Log in
               </button>
+              <!-- link to forget password -->
               <a href="#" class="text-decoration-none text-center"
                 ><p>Forgot password?</p></a
               >
             </form>
+            <!-- Register account -->
 
             <div class="text-center my-4">
               <button
@@ -121,7 +124,7 @@
                       aria-label="Close"
                     ></button>
                   </div>
-                  <!-- body of the modal -->
+                  <!-- Register form start -->
                   <div class="modal-body">
                     <!-- First name and Surname-->
                     <div
@@ -148,7 +151,7 @@
                         />
                       </div>
                     </div>
-                    <!-- email -->
+                    <!-- email /  -->
                     <div class="my-3">
                       <label for="email" class="form-label"
                         >Mobile number or email address</label
@@ -230,6 +233,7 @@
                       </button>
                     </div>
                   </div>
+                  <!-- Register form end -->
                 </div>
               </div>
               <!-- end -->
