--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
-    <link rel="stylesheet" href="/dist/css/styles.css" />
+   <meta
+      name="description"
+      content="Explore creative works from entire world and share yours."
+    />
+    <title>Bcreative | Home page</title>
+    <script
+      src="https://kit.fontawesome.com/bdb94ef7c7.js"
+      crossorigin="anonymous"
   </head>
-  <body></body>
-</html>
+  
