remove create post button

--- a/login.html
+++ b/login.html
@@ -32,7 +32,9 @@
               natus expedita incidunt tenetur iure dolorum atque dolorem
               voluptate nemo consequatur id!
             </p>
+            <!-- <button id="create-post">Create Post</button> -->
           </div>
+
           <!-- form -->
           <div class="col-12 col-md-5">
             <!-- old form -->
