--- a/index.html
+++ b/index.html
@@ -904,6 +904,8 @@
             </div>
           </div>
         </div>
+        <!-- list of post thumnails -->
+
         <!-- Contacts -->
         <div class="col-12 col-md-6 col-lg-3 order-sm-2 order-md-3 order-lg-3">
           <div class="row d-flex justify-content-center">
