--- a/register.html
+++ b/register.html
@@ -90,7 +90,7 @@
                 ><p>Forgot password?</p></a
               >
             </form> -->
-            <!-- Login  account -->
+            <!-- Register form -->
             <form action="" id="registerForm">
               <div class="form-group mb-3">
                 <label for="name">Name</label>
