--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="See, post and edit your profile page." />
-    <title>Bcreative | Profile page</title>
+    <title>Bcreative | Profile</title>
     <script
       src="https://kit.fontawesome.com/bdb94ef7c7.js"
       crossorigin="anonymous"
@@ -19,7 +19,7 @@
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-primary fw-bold" href="index.html"
+        <a class="navbar-brand text-primary fw-bold" href="/profile/index.html"
           >Bcreative</a
         >
         <button
@@ -40,7 +40,7 @@
               <a
                 class="nav-link text-primary"
                 aria-current="page"
-                href="index.html"
+                href="./post/create/index.html"
                 >Home</a
               >
             </li>
@@ -52,7 +52,9 @@
             </li>
             <!-- log -->
             <li class="nav-item">
-              <a class="nav-link text-primary text-danger" href="login.html"
+              <a
+                class="nav-link text-primary text-danger"
+                href="./profile/index.html"
                 >Log out</a
               >
             </li>
@@ -1162,5 +1164,6 @@
       </ul>
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./src/scss/js/index.mjs" type="module"></script>
   </body>
 </html>
