Delete some html pages

--- a/index.html
+++ b/index.html
@@ -21,25 +21,23 @@
             <div class="row">
                 <div class="col-12 col-md-7 mt-lg-4 d-flex flex-column align-items-center align-items-md-start mx-auto mx-lg-0">
                     <a href="/profile/index.html"
-                    ><p class="h1 text-primary fw-bold fs-0 mb-4">Bcreative</p></a
+                    ><p class="h1 text-primary fw-bold fs-0 mb-4">Landing Page</p></a
                   >
-                  <!-- <p class="w-75 fs-4 mb-5">
+                  <p class="w-75 fs-4 mb-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
                     neque dolores autem fugiat. Quisquam itaque hic cupiditate, totam
                     natus expedita incidunt tenetur iure dolorum atque dolorem
                     voluptate nemo consequatur id!
-                  </p> -->
+                  </p>
                 </div>
                 <div class="col-12 col-md-5">
                     <a href="./profile/login/login.html">Login</a>
                     <a href="./profile/register/register.html">register</a>
                     <a href="./post/create/index.html">home</a>
-                    <a href="profile.html">profile</a>
+                    <a href="./profile/profile.html">profile</a>
                 </div>
             </div>
-
-        </div>
-     
+        </div>  
     </main>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./src/scss/js/index.mjs" type="module"></script>
