--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Explore creative works from entire world and share yours."
     />
-    <title>Bcreative | Create Post</title>
+    <title>Bcreative | Edit Profile</title>
     <script
       src="https://kit.fontawesome.com/bdb94ef7c7.js"
       crossorigin="anonymous"
@@ -22,7 +22,9 @@
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-primary fw-bold" href="../../index.html"
+        <a
+          class="navbar-brand text-primary fw-bold"
+          href="../profile/index.html"
           >Bcreative</a
         >
         <button
@@ -74,48 +76,30 @@
       </div>
     </nav>
     <!-- main -->
-    <!-- Feeds -->
-    <main class="container-fluid">
-      <div class="row px-md-5">
-        <!---- - Create Post -->
-        <div
-          class="col-12 col-md-12 col-lg-6 mt-4 order-sm-1 order-md-1 order-lg-2"
-        >
-          <div
-            class="d-flex flex-column justify-content-center w-80 mx-auto mt-5"
-          >
-            <!-- Create Post form -->
-            <form action="" id="createPost">
+    <main class="flex-grow-1 bg-dark text-light">
+      <div class="container-fluid" id="">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-6 mt-5">
+            <form action="" id="editProfile">
+              <h2></h2>
+              <h2></h2>
               <div class="form-group mb-3">
-                <label for="">Title</label>
-                <input class="form-control" type="text" name="title" required />
+                <label for="">Banner</label>
+                <input class="form-control" type="url" name="Banner" />
               </div>
               <div class="form-group mb-3">
-                <label for="">Body</label>
+                <label for="">Avatar</label>
                 <textarea
                   class="form-control"
                   id=""
                   cols="30"
                   rows="10"
-                  type="text"
-                  name="body"
+                  name="avatar"
                 ></textarea>
               </div>
-              <div class="form-group mb-3">
-                <label for="">Tags</label>
-                <input class="form-control" type="text" name="tags" />
-              </div>
-              <div class="form-group mb-3">
-                <label for="">Media</label>
-                <input class="form-control" type="url" name="media" />
-              </div>
-              <button class="btn btn-success">Create Post</button>
+              <button class="btn btn-success">Update Profile</button>
             </form>
           </div>
-          <!-- list of post thumnails -->
-          <!-- <div class="" id="posts">
-            <h2>hello</h2>
-          </div> -->
         </div>
       </div>
     </main>
