--- a/profile/profile.html
+++ b/profile/profile.html
@@ -263,245 +263,10 @@
         >
           <!-- Posts -->
           <div class="col-12 col-md-12 col-lg-8">
-            <!--  posts -->
-            <!--  post one -->
+            <!--  My posts -->
             <div class="bg-white p-4 rounded shadow mt-3">
+              <h2>All my posts</h2>
               <!--  author -->
-              <div class="d-flex justify-content-between">
-                <!-- avatar -->
-                <div class="d-flex">
-                  <img
-                    src=""
-                    alt="avatar"
-                    class="rounded-circle me-2"
-                    style="width: 38px; height: 38px; object-fit: cover"
-                  />
-                  <div>
-                    <p class="m-0 fw-bold">Sayeda</p>
-                    <span class="text-muted fs-7">Oct 24 at 12:15 pm</span>
-                  </div>
-                </div>
-                <!-- edit -->
-                <i
-                  class="fas fa-ellipsis-h"
-                  id="post1Menu"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                ></i>
-                <!-- edit menu -->
-                <ul
-                  class="dropdown-menu border-0 shadow"
-                  aria-labelledby="post1Menu"
-                >
-                  <li class="d-flex align-items-center">
-                    <a
-                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                      href="#"
-                    >
-                      Edit Post</a
-                    >
-                  </li>
-                  <li class="d-flex align-items-center">
-                    <a
-                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                      href="#"
-                    >
-                      Delete Post</a
-                    >
-                  </li>
-                </ul>
-              </div>
-              <!--  post content -->
-              <div class="mt-3">
-                <!-- content -->
-                <div
-                  class="d-flex flex-column flex-md-row justify-content-between align-items-center mb-3"
-                >
-                  <img
-                    src=""
-                    alt="decorating a cake"
-                    class="img-fluid rounded"
-                    width="300"
-                  />
-
-                  <p class="lh-lg p-3 mt-3">
-                    I made this make dolor sit amet consectetur adipisicing
-                    elit. Quae fuga incidunt consequatur tenetur doloremque
-                    officia corrupti provident tempore vitae labore.Lorem ipsum,
-                    dolor sit amet consectetur adipisicing elit. Quae fuga
-                    incidunt consequatur tenetur doloremque officia corrupti
-                    provident tempore vitae labore? Lorem ipsum, dolor sit amet
-                    consectetur adipisicing elit.
-                  </p>
-                </div>
-                <!-- likes & comments -->
-                <div class="post__comment mt-3 position-relative">
-                  <!-- likes -->
-                  <div
-                    class="d-flex align-items-center top-0 start-0"
-                    style="height: 50px; z-index: 5"
-                  >
-                    <div class="me-2">
-                      <i class="text-primary fas fa-thumbs-up"></i>
-                      <i class="text-danger fab fa-gratipay"></i>
-                      <i class="text-warning fas fa-grin-squint"></i>
-                    </div>
-                    <p class="m-0 text-muted fs-7">
-                      Rishan, Yash, and 3 others
-                    </p>
-                  </div>
-                  <!-- comments start-->
-                  <div class="accordion" id="accordionExample">
-                    <div class="accordion-item border-0">
-                      <!-- comment collapse -->
-                      <div class="accordion-header" id="headingTwo">
-                        <div
-                          class="accordion-button collapsed pointer d-flex justify-content-end"
-                          data-bs-toggle="collapse"
-                          data-bs-target="#collapsePost1"
-                          aria-expanded="false"
-                          aria-controls="collapsePost1"
-                        >
-                          <div>
-                            <p class="m-0">2 Comments</p>
-                          </div>
-                        </div>
-                      </div>
-                      <hr />
-                      <!-- comment & like bar -->
-                      <div class="d-flex justify-content-around">
-                        <div
-                          class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1"
-                        >
-                          <i class="fas fa-thumbs-up me-3"></i>
-                          <p class="m-0">Like</p>
-                        </div>
-                        <div
-                          class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1"
-                          data-bs-toggle="collapse"
-                          data-bs-target="#collapsePost1"
-                          aria-expanded="false"
-                          aria-controls="collapsePost1"
-                        >
-                          <i class="fas fa-comment-alt me-3"></i>
-                          <p class="m-0">Comment</p>
-                        </div>
-                      </div>
-                      <!-- comment expand -->
-                      <div
-                        id="collapsePost1"
-                        class="accordion-collapse collapse"
-                        aria-labelledby="headingTwo"
-                        data-bs-parent="#accordionExample"
-                      >
-                        <hr />
-                        <div class="accordion-body">
-                          <!-- comment 1 -->
-                          <div class="d-flex align-items-center my-1">
-                            <!-- avatar -->
-                            <img
-                              src=""
-                              alt="avatar"
-                              class="rounded-circle me-2"
-                              style="
-                                width: 38px;
-                                height: 38px;
-                                object-fit: cover;
-                              "
-                            />
-                            <!-- comment text -->
-                            <div class="p-3 rounded comment__input w-100">
-                              <!-- comment menu of author -->
-                              <div class="d-flex justify-content-end">
-                                <!-- icon -->
-                                <i
-                                  class="fas fa-ellipsis-h text-blue pointer"
-                                  id="post1CommentMenuButton"
-                                  data-bs-toggle="dropdown"
-                                  aria-expanded="false"
-                                ></i>
-                                <!-- menu -->
-                                <ul
-                                  class="dropdown-menu border-0 shadow"
-                                  aria-labelledby="post1CommentMenuButton"
-                                >
-                                  <li class="d-flex align-items-center">
-                                    <a
-                                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                                      href="#"
-                                    >
-                                      Edit Comment</a
-                                    >
-                                  </li>
-                                  <li class="d-flex align-items-center">
-                                    <a
-                                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                                      href="#"
-                                    >
-                                      Delete Comment</a
-                                    >
-                                  </li>
-                                </ul>
-                              </div>
-                              <p class="fw-bold m-0">John</p>
-                              <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit.
-                              </p>
-                            </div>
-                          </div>
-                          <!-- comment 2 -->
-                          <div class="d-flex align-items-center my-1">
-                            <!-- avatar -->
-                            <img
-                              src=""
-                              alt="avatar"
-                              class="rounded-circle me-2"
-                              style="
-                                width: 38px;
-                                height: 38px;
-                                object-fit: cover;
-                              "
-                            />
-                            <!-- comment text -->
-                            <div class="p-3 rounded comment__input w-100">
-                              <p class="fw-bold m-0">Jerry</p>
-                              <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit.
-                              </p>
-                            </div>
-                          </div>
-                          <!-- create comment -->
-                          <form class="d-flex my-1">
-                            <!-- avatar -->
-                            <div>
-                              <img
-                                src=""
-                                alt="avatar"
-                                class="rounded-circle me-2"
-                                style="
-                                  width: 38px;
-                                  height: 38px;
-                                  object-fit: cover;
-                                "
-                              />
-                            </div>
-                            <!-- input -->
-                            <input
-                              type="text"
-                              class="form-control border-0 rounded-pill bg-gray"
-                              placeholder="Write a comment"
-                            />
-                          </form>
-                          <!-- end -->
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- end -->
-                </div>
-              </div>
             </div>
           </div>
           <!-- Your contact-->
@@ -513,12 +278,11 @@
                 <p class="text-muted fs-5 m-3">Your Contacts</p>
                 <p class="text-muted fs-7 m-3">View all</p>
               </div>
-              <!-- Your contact -->
-              <div class="p-3">
+              <!-- friend name -->
+              <!-- <div class="p-3">
                 <ul
                   class="d-flex flex-column justify-content-center align-items-center"
                 >
-                  <!-- friend 1 -->
                   <li
                     class="d-flex align-items-center dropdown-item rounded my-1 px-0"
                   >
@@ -531,47 +295,11 @@
                       />
                     </div>
                     <div>
-                      <p class="m-0">Anil Shetty</p>
+                      <p class="m-0">Alex Robbert</p>
                     </div>
                   </li>
                 </ul>
-              </div>
-              <div>
-                <div
-                  class="d-flex justify-content-between align-items-center mt-3 border-bottom border-gray"
-                >
-                  <p class="text-muted fs-7 m-3">Suggestions for you</p>
-                  <p class="text-muted fs-7 m-3">View all</p>
-                </div>
-                <div class="p-3">
-                  <!-- Suggestion to add new friend -->
-                  <ul
-                    class="d-flex flex-column justify-content-between align-items-center border-bottom border-gray"
-                  >
-                    <!-- friend 1 -->
-                    <li
-                      class="d-flex align-items-center dropdown-item rounded my-1 px-0"
-                      type="button"
-                    >
-                      <div class="p-2">
-                        <img
-                          src=""
-                          alt="avatar"
-                          class="rounded-circle me-2"
-                          style="width: 38px; height: 38px; object-fit: cover"
-                        />
-                      </div>
-                      <div
-                        class="d-flex justify-content-between align-items-center"
-                        style="width: 100%"
-                      >
-                        <p class="m-0">Elisha Wilson</p>
-                        <p class="m-0 text-muted fs-7">follow</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -592,6 +320,6 @@
       </ul>
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../src/scss/js/index.mjs" type="module"></script>
+    <script src="../src/scss/js/api/posts/profile.mjs" type="module"></script>
   </body>
 </html>
