Created  postCardsContainer tin html page

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -266,6 +266,7 @@
             <!--  My posts -->
             <div class="bg-white p-4 rounded shadow mt-3">
               <h2>All my posts</h2>
+              <div class="" id="postCardsContainer"></div>
               <!--  author -->
             </div>
           </div>
